--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
         <!-- 스타일 -->
         <style>
             body {
-                min-width: 540px;
                 min-height: 400px;
                 padding: 0;
                 margin: 0;
@@ -56,8 +55,8 @@
                 width: 100%;
                 height: 100%;
                 position: absolute;
-                opacity: 0.9;
-                background-image: url("Assets/imge/photo04.jpg");
+                /* opacity: 0.9; */
+                background-image: url("Assets/imge/photo05.jpg");
                 background-size: cover;
             }
             .portfolio-cont {
@@ -67,7 +66,7 @@
                 height: 100%;
                 position: absolute;
                 z-index: 1;
-                color: #ffffff;
+                color: #222222;
             }
             .portfolio-cont h1 {
                 margin-top: 30px;
@@ -84,28 +83,27 @@
                 font-size: 18px;
                 text-align: left;
                 padding-left: 40px;
+                color: #ffffff;
             }
             .portfolio-cont p:first-of-type {
-                margin-top: 110px;
-                margin-bottom: 5px;
+                margin-top: 105px;
             }
             .portfolio-cont p:last-of-type {
-                margin-bottom: 10px;
+                margin-bottom: 16px;
             }
-
-
+            
             .portfolio-cont button {
                 display: inline-block;
                 height: 34px;
                 padding: 0px 12px;
-                background: #5c4444;
+                background: #6f7a86;
                 color: #ffffff;
                 border: none;
                 cursor: pointer;
                 border-radius: 5px;
             }
             .portfolio-cont button:hover {
-                background: #0056b3;
+                background: #8ea1b6;
                 font-size: 16px;
             }
             .portfolio-cont a {
@@ -120,22 +118,23 @@
             <div class="portfolio-cont">
                 <h1>유희봉</h1>
                 <div>
-                    열 번 풀면 안풀리는 스크립트는 없다<br>
-                    기술에 대한 깊은 호기심과 끊임없는 학습으로 성장하는 개발자
+                    <b>열 번 풀면 안풀리는 스크립트는 없다</b><br>
+                    기술에 대한 깊은 <b>호기심</b>과 끊임없는 <b>학습</b>으로 성장하는 개발자
                 </div>
                 <p>Frontend Developer</p>
-                <p>emale: qhd1994@naver.com</p>
+                <p> email : qhd1994@naver.com</p>
+                <p> kakao ID : qhd1994</p>
                 <button>
                     <a href="https://github.com/qhd1994?tab=repositories" target="_blank">GitHub</a>
                 </button>
                 <button>
-                    <a href="">About me</a>
+                    <a href="/Portfolio/Source/about.html">About me</a>
                 </button>
                 <button>
-                    <a href="">Project</a>
+                    <a href="/Portfolio/Source/Project.html">Project</a>
                 </button>
                 <button>
-                    <a href="">Study</a>
+                    <a href="/Portfolio/Source/study.html">Study</a>
                 </button>
             </div>
         </div>
