링크 오류 수정

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta name="author" content="유희봉">
 
         <!-- Open Graph -->
-        <meta property="og:title" content="프론트엔드 개발자 유희봉 포트폴리오">
+        <meta property="og:title" content="유희봉의 포트폴리오">
         <meta property="og:description" content="프론트엔드 개발자 유희봉 포트폴리오입니다.">
         <meta property="og:image" content="Assets/imge/photo01.jpg">
         <meta property="og:url" content="https://heebong.me">
@@ -131,7 +131,7 @@
                     <a href="/Portfolio/Source/about.html">About me</a>
                 </button>
                 <button>
-                    <a href="/Portfolio/Source/Project.html">Project</a>
+                    <a href="/Portfolio/Source/project.html">Project</a>
                 </button>
                 <button>
                     <a href="/Portfolio/Source/study.html">Study</a>
