--- a/Source/about.html
+++ b/Source/about.html
@@ -36,13 +36,20 @@
             <section id="section01">
                 <h1>About me</h1>
                 <img src="../Assets/imge/photo01.jpg" alt="">
+                <span class="ing">작업중입니다</span>
             </section>
             <section id="section02">
-                
+                <span class="ing">작업중입니다</span>
             </section>
-            <section id="section03"></section>
-            <section id="section04"></section>
-            <section id="section05"></section>
+            <section id="section03">
+                <span class="ing">작업중입니다</span>
+            </section>
+            <section id="section04">
+                <span class="ing">작업중입니다</span>
+            </section>
+            <section id="section05">
+                <span class="ing">작업중입니다</span>
+            </section>
         </main>
 
 
