--- a/Source/about.html
+++ b/Source/about.html
@@ -171,7 +171,14 @@
             </section>
             <section id="section03">
                 <h2>Project</h2>
-                <span class="ing">참여 프로젝트</span>
+                <div class="card-container">
+                    <div class="card">카드 1</div>
+                    <div class="card">카드 2</div>
+                    <div class="card">카드 3</div>
+                    <div class="card">카드 4</div>
+                </div>
+                <a class="more">더보기</a>
+                <!-- <span class="ing">참여 프로젝트</span> -->
             </section>
             <section id="section04">
                 <span class="ing">경력 및 경험</span>
