--- a/Source/about.html
+++ b/Source/about.html
@@ -172,10 +172,42 @@
             <section id="section03">
                 <h2>Project</h2>
                 <div class="card-container">
-                    <div class="card">카드 1</div>
-                    <div class="card">카드 2</div>
-                    <div class="card">카드 3</div>
-                    <div class="card">카드 4</div>
+                    <div class="card">
+                        <img class="card-img" src="../Assets/imge/P-SmarTreeFIT.png" alt="SmarTreeFIT"></img>
+                        <div class="card-bg"></div>
+                        <div class="card-content">
+                            <div class="card-titel">신영증권 스마트리핏 2.0 개발 프로젝트</div>
+                            <div class="card-period">2022.10~2023.09</div>
+                            <span id="SmarTreeFIT_2023" class="card-more">자세히</span>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img class="card-img" src="../Assets/imge/P-SmarTreeFIT.png" alt="SmarTreeFIT"></img>
+                        <div class="card-bg"></div>
+                        <div class="card-content">
+                            <div class="card-titel">신영증권 스마트리핏 2.0 개편 프로젝트</div>
+                            <div class="card-period">2023.10~2024.07</div>
+                            <span id="SmarTreeFIT_2024" class="card-more">자세히</span>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img class="card-img" src="../Assets/imge/P-green.png" alt="green"></img>
+                        <div class="card-bg"></div>
+                        <div class="card-content">
+                            <div class="card-titel">신영증권 그린 개편 프로젝트</div>
+                            <div class="card-period">2024.08~2024.10</div>
+                            <span id="SmarTreeFIT_2024" class="card-more">자세히</span>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img class="card-img" src="../Assets/imge/P-MOJA-platform.png" alt="MOJA-platform"></img>
+                        <div class="card-bg"></div>
+                        <div class="card-content">
+                            <div class="card-titel">모든자산 플렛폼 개발 프로젝트</div>
+                            <div class="card-period">2024.11~2025.04</div>
+                            <span id="SmarTreeFIT_2024" class="card-more">자세히</span>
+                        </div>
+                    </div>
                 </div>
                 <a class="more">더보기</a>
                 <!-- <span class="ing">참여 프로젝트</span> -->
